Now 3 cards per row in large screens and more BUT new bug introduced
- cards justified at left (not center)
- changed units
- 3 cards per row in large screens

& Minor improvements...

NEW BUG:
Cards not aligned properly (margins) -- to be fixed

--- a/events/style.css
+++ b/events/style.css
@@ -1,6 +1,10 @@
+*{
+  box-sizing: border-box;
+}
+
 .container {
-  max-width: 1100px;
-  margin: 0 auto;
+  width: 100vw;
+/*  padding: 1% 3vw;*/
 }
 h1 {
   align-content: center;
@@ -8,20 +12,17 @@ h1 {
 .cards {
   display: -webkit-flex;
   display: flex;
-  -webkit-justify-content: center;
-  justify-content: center;
+  -webkit-justify-content: left;
+  justify-content: left;
   -webkit-flex-wrap: wrap;
   flex-wrap: wrap;
-  margin-top: 15px;
-  padding: 1.5%;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+  user-select: none;
+  /*margin: 1% 2vw;*/
 }
 
 .card {
   position: relative;
-  margin-bottom: 2px;
+  margin: 1% 1.5vw;
   padding-bottom: 3px;
   background: #fefff9;
   color: #3d3c3c;
@@ -32,22 +33,60 @@ h1 {
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
   border-radius: 4px;
+  width: 29vw;  /* 2vw width for margin (see below) & 87 only available*/
+  cursor: pointer;
 }
-@media (max-width: 700px) {
-  .card {
-    width: 100%;
+
+
+
+@media (min-width: 980px) {
+  .card:nth-child(3n+1){
+  margin-left: 3.5vw;   /*(1.5vw (already) + 2vw (required) )*/
+  }
+
+  .card:nth-child(3n+0){
+    margin-right: 3.5vw;
   }
 }
-@media (min-width: 700px) {
+
+/*@media (min-width: 700px) {*/
+@media (max-width: 980px) {
   .card {
-    max-width: 320px;
+    width: 44vw;
+  }
+
+  .card:nth-child(odd){
+  margin-left: 3vw;   /*(1.5vw (already) + 2vw (required) )*/
+  }
+
+  .card:nth-child(even){
+    margin-right: 3vw;
+  }
+/*    
     margin-right: 20px;
     margin-bottom: 20px;
   }
   .card:nth-child(even) {
     margin-right: 0;
   }
+*/
 }
+
+
+@media (max-width: 700px) {
+  .cards{
+    margin: 1% 1vw;
+    justify-content:  center;
+    -webkit-justify-content: center;
+  }
+
+  .card {
+    margin: 3vw;
+    width: 92vw;
+  }
+}
+
+/*
 @media (min-width: 980px) {
   .card:nth-child(even) {
     margin-right: 20px;
@@ -55,7 +94,8 @@ h1 {
   .card:nth-child(3n) {
     margin-right: 0;
   }
-}
+}*/
+
 .card span {
   display: block;
 }
